`Added hero buttons and updated styles for hero section`

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">🌐</div>
+        <div class="logo"></div>
         <nav>
             <ul>
                 <li><a href="#home" class="active">Home</a></li>
@@ -31,6 +31,11 @@
                 while crafting stunning visual designs. Currently pursuing a BSc in
                 Applied Mathematics and Computing at the University of Vavuniya, Sri Lanka.
             </p>
+             <div class="hero-buttons">
+                 <button class="btn-primary">Hire Me</button>
+                 <button class="btn-outline">Download CV</button>
+            </div>
+            
             <div class="stats">
                 <div class="stat">
                     <h2>07+</h2>
@@ -47,7 +52,7 @@
             </div>
         </div>
         <div class="hero-image">
-            <img src="Your-photo.jpg" alt="Profile picture of Tharusha Bhashitha">
+            <img src="02.jpg" alt="Profile picture of Tharusha Bhashitha">
             <div class="circle small"></div>
             <div class="circle large"></div>
         </div>
